# Copyright 2002-2008 Gentoo Foundation; 2008 Chris Gianelloni, Andrew Gaffney
# Distributed under the GPL v2

  23 Dec 2008; Andrew Gaffney <agaffney@gentoo.org>
  modules/generic_stage_target.py:
  Missing / before 'iso'

  22 Dec 2008; Andrew Gaffney <agaffney@gentoo.org>
  modules/snapshot_target.py:
  Add support for purging to snapshot target

  21 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> TODO:
  Add mix-in cdtar idea to TODO

  21 Dec 2008; Andrew Gaffney <agaffney@gentoo.org>
  -livecd/cdtar/isolinux-3.09-cdtar.tar.bz2,
  -livecd/cdtar/isolinux-3.09-memtest86+-cdtar.tar.bz2:
  Remove old isolinux-3.09 cdtar files

  21 Dec 2008; Andrew Gaffney <agaffney@gentoo.org>
  +livecd/cdtar/isolinux-3.72-cdtar.tar.bz2,
  +livecd/cdtar/isolinux-3.72-memtest86+-cdtar.tar.bz2:
  Update cdtar files to isolinux-3.72 and latest memtest86+-2.10

  19 Dec 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> catalyst:
  Marking this 2.0.6.903 for testing.

  12 Dec 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/netboot2/netboot2-controller.sh:
  Disable copying of nb-busybox.cf since it isn't used anyway

  07 Dec 2008; Andrew Gaffney <agaffney@gentoo.org> arch/amd64.py,
  arch/x86.py, catalyst:
  A few typo and other minor fixes as reported by armin76

  07 Dec 2008; Andrew Gaffney <agaffney@gentoo.org>
  modules/generic_stage_target.py:
  Add support for digests="all" for gentoo bug #209611

  07 Dec 2008; Andrew Gaffney <agaffney@gentoo.org>
  examples/netboot2_template.spec, targets/support/kmerge.sh:
  Automatically append --netboot to GK_ARGS for netboot2 target Remove
  explicit --initramfs-overlay=/tmp/image from netboot2 example spec

  07 Dec 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/pre-kmerge.sh:
  Remove evil hacks that copy gk files around for netboot2

  04 Dec 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> catalyst:
  Bumping version for release.

  01 Dec 2008; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst_support.py: