@@ -55,15 +55,20 @@ setup_gk_args() {
 		GK_ARGS="${GK_ARGS} --linuxrc=/tmp/linuxrc"
 	fi
 
-    if [ "${clst_target}" == "netboot2" ]
-    then
+	if [ -n "${clst_busybox_config}" ]
+	then
+		GK_ARGS="${GK_ARGS} --busybox-config=/tmp/busy-config"
+	fi
+
+	if [ "${clst_target}" == "netboot2" ]
+	then
 		GK_ARGS="${GK_ARGS} --netboot"
 
 		if [ -n "${clst_merge_path}" ]
 		then
-	        GK_ARGS="${GK_ARGS} --initramfs-overlay=\"${clst_merge_path}\""
+			GK_ARGS="${GK_ARGS} --initramfs-overlay=\"${clst_merge_path}\""
 		fi
-    fi
+	fi
 }
 
 genkernel_compile(){
