@@ -1,6 +1,10 @@
 # Copyright 2002-2008 Gentoo Foundation; 2008 Chris Gianelloni, Andrew Gaffney
 # Distributed under the GPL v2
 
+  24 Dec 2008; Andrew Gaffney <agaffney@gentoo.org>
+  targets/netboot2/netboot2-controller.sh, targets/support/kmerge.sh:
+  Add support for gk's --busybox-config= option
+
   23 Dec 2008; Andrew Gaffney <agaffney@gentoo.org>
   modules/generic_stage_target.py:
   Missing / before 'iso'
